fixed prism overflow issue

--- a/styles/prism.css
+++ b/styles/prism.css
@@ -15,7 +15,7 @@ pre[class*="language-"] {
     font-size: 1em;
     line-height: 1.5;
     letter-spacing: 0.2px;
-    white-space: pre;
+    /* white-space: pre; */
     word-spacing: normal;
     word-break: normal;
     word-wrap: normal;
